--- a/index.html
+++ b/index.html
@@ -6,6 +6,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food-Website</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/32a2b7a705.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav>
+        <div class="logo">
+          <img src="logo.png" alt="logo" />
+        </div>
+        <div class="bar">
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </nav>
+
+      <middle>
+        <div class="middle_img">
+          <img src="images/Bbq-1.jpg" alt="" />
+        </div>
+        <div class="middle_content">
+          <div class="tag">70% off on Opening !</div>
+          <h1>Taste Like Your Home</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos neque
+            sapiente sunt quod quam velit exercitationem nobis libero, voluptas
+            iusto ex? Atque, dolorem consequatur doloremque rerum minima
+            exercitationem modi quidem?
+          </p>
+          <button class="middle_btn">Order Now</button>
+        </div>
+      </middle>
+
+      <underline>
+        <div class="voucher">
+          <img src="voucher.jpg" alt="" />
+          <h3>Free Voucher</h3>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos
+          dignissimos aspernatur quibusdam,
+        </div>
+        <div class="customer">
+          <img src="customer.jpg" alt="" />
+          <h3>24/7 Customer Service</h3>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos
+          dignissimos aspernatur quibusdam
+        </div>
+
+        <div class="Fast-Delivery">
+          <img src="fast.jpg" alt="" />
+          <h3>Fast Delivery</h3>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos
+          dignissimos aspernatur quibusdam,
+        </div>
+      </underline>
+      <div class="awards"></div>
+
+      <menu>
+        <div class="tag">Our Menu</div>
+        <h2>Have a look at our Menu !</h2>
+
+        <footer>
+          <div class="grid">
+            <div class="img-2">
+              <img src="images/Desert-1.jpg " alt="" />
+            </div>
+            <div class="img-3">
+              <img src="images/Bbq-3.jpg" alt="" />
+            </div>
+            <div class="img-4">
+              <img src="images/Bbq-4.jpg" alt="" />
+            </div>
+            <div class="img-6">
+              <img src="images/Desert-4.jpg" alt="" />
+            </div>
+            <div class="img-5">
+              <img src="images/Desert-2.jpg" alt="" />
+            </div>
+            <div class="img-7">
+              <img src="images/Desert-5.jpg" alt="" />
+            </div>
+          </div>
+        </footer>
+      </menu>
+
+      <last>
+        <div class="logo-last">
+          <img src="logo.png" alt="" />
+        </div>
+        <div class="link">
+          <h3>Main-Links</h3>
+          <ul>
+            <li>Order-Tracking</li>
+            <li>New-Order</li>
+            <li>Contact-Us</li>
+            <li>News And Blogs</li>
+          </ul>
+        </div>
+        <div class="support">
+          <h3>Support</h3>
+          <ul>
+            <li>About-Us</li>
+            <li>Privacy</li>
+            <li>Terms and Condition</li>
+          </ul>
+        </div>
+        <div class="join">
+          <h3>Join us</h3>
+          <input type="email" placeholder="Enter your Email" />
+          <h3>Follow Us</h3>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-whatsapp"></i>
+        </div>
+      </last>
+    </div>
+  </body>
 </html>
