--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos neque
             sapiente sunt quod quam velit exercitationem nobis libero, voluptas
             iusto ex? Atque, dolorem consequatur doloremque rerum minima
-            exercitationem modi?
+            exercitationem modi hyuenm ?
           </p>
           <button class="middle_btn">Order Now</button>
         </div>
